css login and registration scrollbar fix

--- a/src/main/webapp/WEB-INF/templates/css/login_style.css
+++ b/src/main/webapp/WEB-INF/templates/css/login_style.css
@@ -75,3 +75,11 @@ html {
   bottom: 0px;
   left: 375px;
 }
+
+.h-100 {
+  /* width: 400px; */
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
